unpackaged/main/default/objects/Contact/fields/LifetimePurchaseAmountServices__c.field-meta.xml
<CustomField>
    <fullName>LifetimePurchaseAmountServices__c</fullName>
    <label>Lifetime Purchase Amount Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>