unpackaged/main/default/objects/Contact/fields/LightCurrentCluster__c.field-meta.xml
<CustomField>
    <fullName>LightCurrentCluster__c</fullName>
    <label>Light Current Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dormant_Client_L</fullName>
                <label>Dormant Client</label>
            </value>
            <value>
                <fullName>Personal Shopper</fullName>
            </value>
            <value>
                <fullName>Collab</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Dreamer</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>Inactive Client</fullName>
            </value>
            <value>
                <fullName>One Timer</fullName>
            </value>
            <value>
                <fullName>Multi-timer</fullName>
            </value>
            <value>
                <fullName>Experimenter</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>