unpackaged/main/default/objects/Contact/fields/LightPreviousCluster__c.field-meta.xml
<CustomField>
    <fullName>LightPreviousCluster__c</fullName>
    <label>Light Previous Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active_Prospect_L</fullName>
                <label>Active Prospect</label>
            </value>
            <value>
                <fullName>Dreamer_L</fullName>
                <label>Dreamer</label>
            </value>
            <value>
                <fullName>One_Timer_L</fullName>
                <label>One-Timer</label>
            </value>
            <value>
                <fullName>Multi_Timer_L</fullName>
                <label>Multi-Timer</label>
            </value>
            <value>
                <fullName>VIC_L</fullName>
                <label>VIC</label>
            </value>
            <value>
                <fullName>Dormant_Prospects_L</fullName>
                <label>Dormant Prospect</label>
            </value>
            <value>
                <fullName>Dormant_Client_L</fullName>
                <label>Dormant Client</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>