unpackaged/main/default/objects/Contact/fields/LINE_Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>LINE_Channel_ID__c</fullName>
    <label>LINE Channel ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>