unpackaged/main/default/objects/Contact/fields/LINE_UID__c.field-meta.xml
<CustomField>
    <fullName>LINE_UID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>LINE UID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>