unpackaged/main/default/objects/Contact/fields/Local__c.field-meta.xml
<CustomField>
    <fullName>Local__c</fullName>
    <formula>IF(  TEXT(Country__c)  ==  TEXT(OriginStore__r.Country__c)  , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>the status of the client in relation to the attached store</inlineHelpText>
    <label>Local</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>