unpackaged/main/default/objects/Contact/fields/LocalOrTourist__c.field-meta.xml
<CustomField>
    <fullName>LocalOrTourist__c</fullName>
    <formula>IF(TEXT(Country__c) == &quot;&quot;, &quot;Unknown&quot;, IF(TEXT(Country__c) = TEXT(MainStore__r.Country__c) , &quot;Local&quot;, &quot;Tourist&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>the status of the client in relation to the attached store</inlineHelpText>
    <label>Local or Tourist ?</label>
    <type>Text</type>
</CustomField>