unpackaged/main/default/objects/Contact/fields/MainStore__c.field-meta.xml
<CustomField>
    <fullName>MainStore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Boutique</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Contacts (Main Store)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>