unpackaged/main/default/objects/Contact/fields/MainStoreId__c.field-meta.xml
<CustomField>
    <fullName>MainStoreId__c</fullName>
    <externalId>true</externalId>
    <label>Main Boutique Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>