unpackaged/main/default/objects/Contact/fields/NbOfClients__c.field-meta.xml
<CustomField>
    <fullName>NbOfClients__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Clients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>