unpackaged/main/default/objects/Contact/fields/NewsletterSubscription__c.field-meta.xml
<CustomField>
    <fullName>NewsletterSubscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Newsletter Subscription</label>
    <type>Checkbox</type>
</CustomField>