unpackaged/main/default/objects/Contact/fields/NumberOfVisit__c.field-meta.xml
<CustomField>
    <fullName>NumberOfVisit__c</fullName>
    <label>Number Of Visit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>