unpackaged/main/default/objects/Contact/fields/OneTimer__c.field-meta.xml
<CustomField>
    <fullName>OneTimer__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Repeater</fullName>
            </value>
            <value>
                <fullName>MULTI_REPEATER</fullName>
                <label>Multi Repeater</label>
            </value>
            <value>
                <fullName>ONE_TIMER</fullName>
                <label>One Timer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>