unpackaged/main/default/objects/Contact/fields/OptinCalling__c.field-meta.xml
<CustomField>
    <fullName>OptinCalling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optin Phone</label>
    <type>Checkbox</type>
</CustomField>