unpackaged/main/default/objects/Contact/fields/OptinEmailing__c.field-meta.xml
<CustomField>
    <fullName>OptinEmailing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optin Email</label>
    <type>Checkbox</type>
</CustomField>