unpackaged/main/default/objects/Contact/fields/OptinInstantMessaging__c.field-meta.xml
<CustomField>
    <fullName>OptinInstantMessaging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optin Instant Messaging</label>
    <type>Checkbox</type>
</CustomField>