unpackaged/main/default/objects/Contact/fields/OptinMailing__c.field-meta.xml
<CustomField>
    <fullName>OptinMailing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optin Post</label>
    <type>Checkbox</type>
</CustomField>