unpackaged/main/default/objects/Contact/fields/OptoutCalling__c.field-meta.xml
<CustomField>
    <fullName>OptoutCalling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optout Phone</label>
    <type>Checkbox</type>
</CustomField>