unpackaged/main/default/objects/Contact/fields/OptoutEmailing__c.field-meta.xml
<CustomField>
    <fullName>OptoutEmailing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optout Email</label>
    <type>Checkbox</type>
</CustomField>