unpackaged/main/default/objects/Contact/fields/OptoutInstantMessaging__c.field-meta.xml
<CustomField>
    <fullName>OptoutInstantMessaging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optout Instant Messaging</label>
    <type>Checkbox</type>
</CustomField>