unpackaged/main/default/objects/Contact/fields/OptoutMailing__c.field-meta.xml
<CustomField>
    <fullName>OptoutMailing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optout Post</label>
    <type>Checkbox</type>
</CustomField>