unpackaged/main/default/objects/Contact/fields/OriginStore__c.field-meta.xml
<CustomField>
    <fullName>OriginStore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Contacts (Origin Store)</relationshipLabel>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>