unpackaged/main/default/objects/Contact/fields/OriginStoreId__c.field-meta.xml
<CustomField>
    <fullName>OriginStoreId__c</fullName>
    <label>Origin Store Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>