unpackaged/main/default/objects/Contact/fields/OtherEmail__c.field-meta.xml
<CustomField>
    <fullName>OtherEmail__c</fullName>
    <label>Other Email</label>
    <type>Email</type>
</CustomField>