unpackaged/main/default/objects/Contact/fields/OtherEmailValid__c.field-meta.xml
<CustomField>
    <fullName>OtherEmailValid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Email Valid</label>
    <type>Checkbox</type>
</CustomField>