unpackaged/main/default/objects/Contact/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>With or without a purchase and has declared a warranty</description>
    <label>Owner</label>
    <type>Checkbox</type>
</CustomField>