unpackaged/main/default/objects/Contact/fields/Phone1Valid__c.field-meta.xml
<CustomField>
    <fullName>Phone1Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone 1 Valid</label>
    <type>Checkbox</type>
</CustomField>