unpackaged/main/default/objects/Contact/fields/Phone2Valid__c.field-meta.xml
<CustomField>
    <fullName>Phone2Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone 2 Valid</label>
    <type>Checkbox</type>
</CustomField>