unpackaged/main/default/objects/Contact/fields/Phone3__c.field-meta.xml
<CustomField>
    <fullName>Phone3__c</fullName>
    <label>Phone 3</label>
    <type>Phone</type>
</CustomField>