unpackaged/main/default/objects/Contact/fields/Phone3Type__c.field-meta.xml
<CustomField>
    <fullName>Phone3Type__c</fullName>
    <label>Phone 3 Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HOME_PHONE</fullName>
                <label>Home Phone</label>
            </value>
            <value>
                <fullName>MOBILE_PHONE</fullName>
                <label>Mobile Phone</label>
            </value>
            <value>
                <fullName>PHONE</fullName>
                <label>Phone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>