unpackaged/main/default/objects/Contact/fields/Phone3Valid__c.field-meta.xml
<CustomField>
    <fullName>Phone3Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone 3 Valid</label>
    <type>Checkbox</type>
</CustomField>