unpackaged/main/default/objects/Contact/fields/PhoneticFullName__c.field-meta.xml
<CustomField>
    <fullName>PhoneticFullName__c</fullName>
    <label>Phonetic Full Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>