unpackaged/main/default/objects/Contact/fields/PreferredStore__c.field-meta.xml
<CustomField>
    <fullName>PreferredStore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Contacts (Preferred Store)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>