unpackaged/main/default/objects/Contact/fields/PreferredStoreId__c.field-meta.xml
<CustomField>
    <fullName>PreferredStoreId__c</fullName>
    <label>Preferred Store Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>