unpackaged/main/default/objects/Contact/fields/PreferredTransactionChannel__c.field-meta.xml
<CustomField>
    <fullName>PreferredTransactionChannel__c</fullName>
    <label>Preferred Transaction Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OFFLINE</fullName>
            </value>
            <value>
                <fullName>ECOM</fullName>
            </value>
            <value>
                <fullName>CROSSCHANNEL</fullName>
                <label>CROSS CHANNEL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>