unpackaged/main/default/objects/Contact/fields/PreviousCluster__c.field-meta.xml
<CustomField>
    <fullName>PreviousCluster__c</fullName>
    <label>Previous Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DORMANT_PROSPECT</fullName>
                <label>Dormant Prospect</label>
            </value>
            <value>
                <fullName>ONBOARDER</fullName>
                <label>Onboarder</label>
            </value>
            <value>
                <fullName>FREQUENT_FLYER</fullName>
                <label>Frequent Flyer</label>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>ESCAPER</fullName>
                <label>Escaper</label>
            </value>
            <value>
                <fullName>DORMANT_CLIENT</fullName>
                <label>Dormant Client</label>
            </value>
            <value>
                <fullName>EXPERIMENTER</fullName>
                <label>Expérimenter</label>
            </value>
            <value>
                <fullName>ACTIVE_PROSPECT</fullName>
                <label>Active Prospect</label>
            </value>
            <value>
                <fullName>JET_SETTER</fullName>
                <label>Jet Setter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>