unpackaged/main/default/objects/Contact/fields/ProfilCompletionGraph__c.field-meta.xml
<CustomField>
    <fullName>ProfilCompletionGraph__c</fullName>
    <formula>IF(ProfileCompletion__c == 0.2 , &quot;⚫⚫⚪⚪⚪⚪⚪⚪⚪⚪ 20%&quot; , &#39;&#39;) + 
IF(ProfileCompletion__c == 0.35 , &quot;⚫⚫⚫◐⚪⚪⚪⚪⚪⚪35%&quot; , &#39;&#39;) + 
IF(ProfileCompletion__c == 0.4 , &quot;⚫⚫⚫⚫⚪⚪⚪⚪⚪⚪40%&quot; , &#39;&#39;) + 
IF(ProfileCompletion__c == 0.5 , &quot;⚫⚫⚫⚫⚫⚪⚪⚪⚪⚪50%&quot; , &#39;&#39;) + 
IF(ProfileCompletion__c == 0.55 , &quot;⚫⚫⚫⚫⚫◐⚪⚪⚪⚪55%&quot; , &#39;&#39;) + 
IF(ProfileCompletion__c == 0.65 , &quot;⚫⚫⚫⚫⚫⚫◐⚪⚪⚪65%&quot; , &#39;&#39;) + 
IF(ProfileCompletion__c == 0.7 , &quot;⚫⚫⚫⚫⚫⚫⚫⚪⚪⚪70%&quot; , &#39;&#39;) + 
IF(ProfileCompletion__c == 0.8 , &quot;⚫⚫⚫⚫⚫⚫⚫⚫⚪⚪ 80%&quot; , &#39;&#39;) + 
IF(ProfileCompletion__c == 0.85 , &quot;⚫⚫⚫⚫⚫⚫⚫⚫◐⚪ 85%&quot; , &#39;&#39;) + 
IF(ProfileCompletion__c == 1, &quot;⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫100%&quot; , &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>First Name: 20% 
Last Name: 20% (mandatory)
Salutation :15 %
Mailing Country: 15% 
Nationality: 15%
Birthdate: 15%</inlineHelpText>
    <label>Profil Completion Image</label>
    <type>Text</type>
</CustomField>