unpackaged/main/default/objects/Contact/fields/ProfileCompletion__c.field-meta.xml
<CustomField>
    <fullName>ProfileCompletion__c</fullName>
    <formula>IF( NOT( ISBLANK(FirstName) ) , 0.20, 0 )
+ IF( NOT( ISBLANK(LastName) ) , 0.20, 0 )
+ IF( NOT( ISPICKVAL(Salutation, &#39;&#39;) ) , 0.15, 0 )
+ IF( NOT( ISBLANK(Birthdate) ) , 0.15, 0 )
+ IF( NOT( ISBLANK(MailingCountry ) ) , 0.15, 0 )
+ IF( NOT( ISPICKVAL( Nationality__c , &#39;&#39;) ) , 0.15, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Completion Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>