unpackaged/main/default/objects/Contact/fields/ProspectA__c.field-meta.xml
<CustomField>
    <fullName>ProspectA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No purchase and without warranty</description>
    <label>Prospect (A)</label>
    <type>Checkbox</type>
</CustomField>