unpackaged/main/default/objects/Contact/fields/PurchaserBehaviorMethod__c.field-meta.xml
<CustomField>
    <fullName>PurchaserBehaviorMethod__c</fullName>
    <label>Purchaser Behavior Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OmniChannel only (Web2store et store2web)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>