unpackaged/main/default/objects/Contact/fields/PurchaserStatus__c.field-meta.xml
<CustomField>
    <fullName>PurchaserStatus__c</fullName>
    <label>Purchaser Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
            <value>
                <fullName>INACTIVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>