unpackaged/main/default/objects/Contact/fields/PurchaserStatusSubCategory__c.field-meta.xml
<CustomField>
    <fullName>PurchaserStatusSubCategory__c</fullName>
    <label>Purchaser Status Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RECENT</fullName>
            </value>
            <value>
                <fullName>CURRENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>