unpackaged/main/default/objects/Contact/fields/Re_Crafted_Seller__c.field-meta.xml
<CustomField>
    <fullName>Re_Crafted_Seller__c</fullName>
    <description>We want to identify a client who has participated to the buy-back program by reselling his old RIMOWA suitcase. To do this we wish to create a new field at Client level to be exported to SFDC. </description>
    <inlineHelpText>‘’Recrafted Firstimer’’ à A client who resells 1 or several RIMOWA suitcases for the first time                        
‘’Recrafted Adopter’’ à A client who has resold several RIMOWA suitcases on different dates.</inlineHelpText>
    <label>Re Crafted Seller</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recrafted Adopter</fullName>
            </value>
            <value>
                <fullName>Recrafted Firstimer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>