unpackaged/main/default/objects/Contact/fields/Repair__c.field-meta.xml
<CustomField>
    <fullName>Repair__c</fullName>
    <defaultValue>false</defaultValue>
    <description>With or without a purchase and has made a repair</description>
    <label>Repair</label>
    <type>Checkbox</type>
</CustomField>