unpackaged/main/default/objects/Contact/fields/RomanizedFirstname__c.field-meta.xml
<CustomField>
    <fullName>RomanizedFirstname__c</fullName>
    <label>Romanized Firstname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>