unpackaged/main/default/objects/Contact/fields/RomanizedLastname__c.field-meta.xml
<CustomField>
    <fullName>RomanizedLastname__c</fullName>
    <label>Romanized Lastname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>