unpackaged/main/default/objects/Contact/fields/SecondAlphabetFirstname__c.field-meta.xml
<CustomField>
    <fullName>SecondAlphabetFirstname__c</fullName>
    <label>Second Alphabet Firstname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>