unpackaged/main/default/objects/Contact/fields/SecondAlphabetLastname__c.field-meta.xml
<CustomField>
    <fullName>SecondAlphabetLastname__c</fullName>
    <label>Second Alphabet Lastname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>