unpackaged/main/default/objects/Contact/fields/SecondName__c.field-meta.xml
<CustomField>
    <fullName>SecondName__c</fullName>
    <label>Second Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>