unpackaged/main/default/objects/Contact/fields/SFSC_Contact_Key__c.field-meta.xml
<CustomField>
    <fullName>SFSC_Contact_Key__c</fullName>
    <description>18 digits casesafe Contact ID</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SFSC Contact Key</label>
    <type>Text</type>
</CustomField>